--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">DoOkOff</string>
     <string name="off_test_1">Urlop zaległy: 2 dni</string>
     <string name="off_test_2">Z limitu na żądanie: 3 dni</string>
-    <string name="good_morning">\"Dzień dobry, \"</string>
+    <string name="off_test_3">Wolne do wybrania: 28 dni</string>
+    <string name="good_morning">Dzień dobry, </string>
     <string name="paychecks">Wypłaty</string>
     <string name="day_offs">Urlopy</string>
     <string name="off_coming">Zbliżający się urlop</string>
