--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="off_test_1">Urlop zaległy: 2 dni</string>
     <string name="off_test_2">Z limitu na żądanie: 3 dni</string>
     <string name="off_test_3">Wolne do wybrania: 28 dni</string>
-    <string name="good_morning">\"Dzień dobry, \"</string>
+    <string name="good_morning">Dzień dobry, </string>
     <string name="paychecks">Wypłaty</string>
     <string name="day_offs">Urlopy</string>
     <string name="off_coming">Zbliżający się urlop</string>
