Added source of data from ViewModel to Compose View and creating simple CardView from the api data.

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -5,7 +5,7 @@
     <string name="off_test_2">Z limitu na żądanie: 3 dni</string>
     <string name="off_test_3">Wolne do wybrania: 28 dni</string>
     <string name="good_morning">Dzień dobry, </string>
-    <string name="paychecks">Wypłaty</string>
+    <string name="paychecks">Koty</string>
     <string name="day_offs">Urlopy</string>
     <string name="off_coming">Zbliżający się urlop</string>
     <string name="history_of_offs">Historia urlopów</string>
