--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -10,4 +10,5 @@
     <string name="off_coming">Zbliżający się urlop</string>
     <string name="history_of_offs">Historia urlopów</string>
     <string name="off_applications_list">Wnioski urlopowe</string>
+    <string name="reserve_table">Rezerwacja</string>
 </resources>
